Test Demo Bootstrap cua thay

--- a/BT1_Web/index.html
+++ b/BT1_Web/index.html
@@ -4,25 +4,22 @@
     <meta charset="utf-8">
     <title>Hello bootstrap</title>
 
-    <link rel="stylesheet"
-    href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <nav class="nav navbar-default">
       <div class="">
         <ul class="nav navbar-nav">
-         <li class="li"><a href="#">Home</a></li>
-         <li class="li"><a href="#">Album</a></li>
-         <li class="li"><a href="#">Photo</a></li>
+         <li class="active"><a href="index.html">Home</a></li>
+         <li class=""><a href="albums.html">Albums</a></li>
+         <li class=""><a href="photos.html">Photos</a></li>
         </ul>
       </div>
     </nav>
-asdasfdsf
     <h1>Homepage</h1>
-    <h2>home</h2>
 
-    <button type="button" class="btn btn-primary"
-    name="button">My Botton</button>
+
 
     <script src="js/jquery.min.js"
     charset="utf-8"></script>
