--- a/BT1_Web/albums.html
+++ b/BT1_Web/albums.html
@@ -2,10 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello bootstrap</title>
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/jquery.min.js" charset="utf-8"></script>
+    <script src="js/bootstrap.js" charset="utf-8"></script>
   </head>
   <body>
     <nav class="nav navbar-default">
@@ -78,12 +81,6 @@
       </div>
     </div>
 
-
-
-    <script src="js/jquery.min.js"
-    charset="utf-8"></script>
-    <script src="js/bootstrap.js"
-    charset="utf-8"></script>
 
   </body>
 </html>
