--- a/BT1_Web/photos.html
+++ b/BT1_Web/photos.html
@@ -6,6 +6,9 @@
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
+
+    <script src="js/jquery.min.js" charset="utf-8"></script>
+    <script src="js/bootstrap.js" charset="utf-8"></script>
   </head>
   <body>
     <nav class="nav navbar-default">
@@ -81,10 +84,7 @@
 
 
 
-    <script src="js/jquery.min.js"
-    charset="utf-8"></script>
-    <script src="js/bootstrap.js"
-    charset="utf-8"></script>
+
 
   </body>
 </html>
